--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 [Tokens]
-db_name = ''
-user = ''
-password = ''
+db_name = netology_db
+user = postgres
+password = geonav2024
 host = localhost
 port = 5432
