Update settungs.ini and requirements files

--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 [Tokens]
-db_name = netology_db
-user = postgres
-password = geonav2024
+db_name = ''
+user = ''
+password = ''
 host = localhost
 port = 5432
